using System;
using System.Collections.Generic;

namespace funcs;

public partial class KakaoUser
{
    public Guid UserId { get; set; }

    public long KakaoId { get; set; }

    public string Info { get; set; }
}
